--- a/agregadorinvestimentos/src/main/resources/application.properties
+++ b/agregadorinvestimentos/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=agregadorinvestimentos
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
